--- a/index.html
+++ b/index.html
@@ -1,106 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>PoorCoin (POOR) — Official Site</title>
-<meta name="description" content="PoorCoin (POOR) — The People's Meme Token on BNB Smart Chain (BEP-20). Contract, tokenomics, links, whitepaper and FAQ."/>
-<style>
-  :root{--bg:#0f172a;--card:#fff;--muted:#64748b;--ink:#111827;--accent:#2563eb;--accent2:#0ea5e9}
-  *{box-sizing:border-box} html{scroll-behavior:smooth}
-  body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;background:#f1f5f9;color:var(--ink)}
-  .hero{background:linear-gradient(130deg,var(--bg),#1e293b);color:#fff;text-align:center;padding:36px 16px 28px}
-  .brand{display:flex;align-items:center;justify-content:center;gap:14px}
-  .brand img{height:66px;width:auto;border-radius:10px;background:#fff;padding:6px}
-  .brand h1{margin:0;font-size:28px}
-  .sub{margin:6px 0 16px;color:#cbd5e1;font-size:14px}
-  .nav{display:flex;justify-content:center;gap:10px;flex-wrap:wrap}
-  .chip{border:1px solid rgba(255,255,255,.2);color:#e2e8f0;background:transparent;padding:8px 14px;border-radius:999px;font-size:14px;text-decoration:none}
-  .chip:hover{background:rgba(255,255,255,.08)}
-  .wrap{max-width:1000px;margin:22px auto;padding:0 16px;display:grid;gap:18px}
-  .card{background:var(--card);border-radius:12px;box-shadow:0 6px 24px rgba(15,23,42,.08);padding:18px}
-  h2{margin:0 0 12px;font-size:20px;color:var(--accent)}
-  .contract{background:#f3f4f6;border-radius:10px;padding:10px;display:flex;align-items:center;gap:10px;font-family:ui-monospace,Consolas,Menlo,monospace;overflow:auto}
-  .btn{border:0;border-radius:10px;padding:10px 14px;font-weight:600;cursor:pointer;color:#fff;background:var(--accent)}
-  .btn.sec{background:#0f766e} .btn.gray{background:#1f2937} .btn:hover{filter:brightness(1.05)}
-  table{width:100%;border-collapse:collapse;margin-top:6px}
-  th,td{padding:10px 12px;border-bottom:1px solid #e5e7eb;text-align:left}
-  th{background:#f8fafc;color:#0f172a}
-  .links{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px}
-  .pill{display:flex;align-items:center;justify-content:space-between;border:1px solid #e5e7eb;border-radius:12px;padding:12px 14px;background:#fafafa}
-  .pill a{color:var(--accent);text-decoration:none;font-weight:600}
-  .muted{color:var(--muted);font-size:13px}
-  footer{text-align:center;color:#475569;font-size:14px;padding:26px 10px 40px}
-  footer b{color:#0f172a}
-</style>
-<script>
-  const CONTRACT="0x6208384e2dda2ab804a5b75aebc1609ba9ce7336";
-  function copyContract(){navigator.clipboard.writeText(CONTRACT).then(()=>alert("Contract copied!"))}
-  function openWP(){window.open("whitepaper.html","_blank")}
-</script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PoorCoin (POOR)</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(180deg, #0d0d0d, #1a1a1a);
+      color: #f1f1f1;
+      text-align: center;
+    }
+
+    header {
+      padding: 30px 0;
+      background: #111;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+    }
+
+    header img {
+      width: 140px;
+      height: auto;
+      transition: transform 0.3s ease;
+    }
+
+    header img:hover {
+      transform: scale(1.1);
+    }
+
+    h1 {
+      margin-top: 10px;
+      font-size: 2.2rem;
+      color: #ffcc00;
+    }
+
+    p {
+      max-width: 700px;
+      margin: 10px auto;
+      line-height: 1.6;
+    }
+
+    .btn {
+      display: inline-block;
+      margin: 15px;
+      padding: 12px 28px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      background: #ffcc00;
+      color: #111;
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    .btn:hover {
+      background: #ffaa00;
+      transform: translateY(-3px);
+    }
+
+    .contract {
+      margin-top: 20px;
+      font-size: 1rem;
+      word-wrap: break-word;
+      color: #ccc;
+    }
+
+    footer {
+      margin-top: 40px;
+      padding: 15px;
+      background: #0b0b0b;
+      font-size: 0.9rem;
+      color: #888;
+    }
+
+    .social {
+      margin-top: 20px;
+    }
+
+    .social a {
+      color: #ffcc00;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s;
+    }
+
+    .social a:hover {
+      color: #ffaa00;
+    }
+  </style>
 </head>
 <body>
-  <section class="hero">
-    <div class="brand">
-      <img src="poorcoin_logo_.png" alt="PoorCoin logo"/>
-      <div>
-        <h1>PoorCoin (POOR)</h1>
-        <div class="sub">The People's Meme Token — BNB Smart Chain (BEP-20)</div>
-      </div>
+
+  <header>
+    <img src="poorcoin_logo_.png" alt="PoorCoin Logo">
+    <h1>PoorCoin (POOR)</h1>
+  </header>
+
+  <section>
+    <p><strong>PoorCoin</strong> is the people’s meme token – built for fun, community, and transparency. 
+      Fair launch, real holders, and active development. Join the movement of the humble and hopeful.</p>
+
+    <a class="btn" href="https://pump.fun/coin/99ah2aM4fxtLRQmtmPsGMJYRVZYTNArdRThUhDZTpump" target="_blank">Trade on Pump.fun</a>
+    <a class="btn" href="https://t.me/poorcoin_bsc" target="_blank">Join Telegram</a>
+    <a class="btn" href="https://twitter.com/SeeeskoTodorov" target="_blank">Follow on Twitter</a>
+
+    <div class="contract">
+      <p><strong>Contract Address (Pump):</strong><br>
+      99ah2aM4fxtLRQmtmPsGMJYRVZYTNArdRThUhDZTpump</p>
+      <p><strong>Email:</strong> team@poorcoin.net</p>
     </div>
-    <nav class="nav">
-      <a class="chip" href="tokenomics.html">Tokenomics</a>
-      <a class="chip" href="#links">Links</a>
-      <a class="chip" href="about.html">About</a>
-      <a class="chip" href="whitepaper.html">Whitepaper</a>
-      <a class="chip" href="faq.html">FAQ</a>
-    </nav>
   </section>
 
-  <main class="wrap">
-    <section id="contract" class="card">
-      <h2>Contract Address (BEP-20)</h2>
-      <div class="contract">
-        <span>0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</span>
-        <button class="btn gray" onclick="copyContract()">Copy</button>
-      </div>
-      <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:10px">
-        <button class="btn" onclick="window.open('https://bscscan.com/token/'+CONTRACT,'_blank')">View on BscScan</button>
-        <button class="btn sec" onclick="window.open('https://pancakeswap.finance/info/pairs/0xf6fa8d299245a8627d054632de4b55ee017de723','_blank')">Buy on PancakeSwap</button>
-        <button class="btn" onclick="openWP()">Whitepaper</button>
-      </div>
-    </section>
-
-    <section class="card">
-      <h2>Tokenomics (Summary)</h2>
-      <table>
-        <thead><tr><th>Category</th><th>Amount</th><th>%</th></tr></thead>
-        <tbody>
-          <tr><td>Team / Main wallet (owner)</td><td>779,704,502</td><td>77.97%</td></tr>
-          <tr><td>Locked (vesting)</td><td>200,000,000</td><td>20.00%</td></tr>
-          <tr><td>Liquidity (PancakeSwap pool)</td><td>15,750,000</td><td>1.58%</td></tr>
-          <tr><td>Other holders / buyers</td><td>4,545,498</td><td>0.45%</td></tr>
-          <tr><th>Total Supply</th><th>1,000,000,000 POOR</th><th>100%</th></tr>
-        </tbody>
-      </table>
-      <p class="muted">Full breakdown: <a href="tokenomics.html">tokenomics.html</a></p>
-    </section>
-
-    <section id="links" class="card">
-      <h2>Project Links</h2>
-      <div class="links">
-        <div class="pill"><span>Website</span><a href="https://poorcoin.net" target="_blank">poorcoin.net</a></div>
-        <div class="pill"><span>Telegram</span><a href="https://t.me/poorcoin_bsc" target="_blank">@poorcoin_bsc</a></div>
-        <div class="pill"><span>Twitter / X</span><a href="https://twitter.com/SeeeskoTodorov" target="_blank">@SeeeskoTodorov</a></div>
-        <div class="pill"><span>Medium</span><a href="https://medium.com/@seeesko" target="_blank">Article</a></div>
-        <div class="pill"><span>GitHub</span><a href="https://github.com/seeesko-sys/PoorCoin-site" target="_blank">repo</a></div>
-      </div>
-    </section>
-  </main>
+  <div class="social">
+    <a href="https://poorcoin.net" target="_blank">Website</a> |
+    <a href="https://github.com/seeesko-sys/PoorCoin-site" target="_blank">GitHub</a> |
+    <a href="https://medium.com/@seeesko" target="_blank">Medium</a>
+  </div>
 
   <footer>
-    © 2025 PoorCoin. All Rights Reserved.<br/>
-    BY <b>TODOROV &amp; LESEV</b>
+    © 2025 PoorCoin | by <strong>Todorov & Lesev</strong>
   </footer>
+
 </body>
 </html>
